--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "short_name": "URI Splitter",
   "description": "Easily and quickly edit the URL/URI from the current page",
   "author": "Denilson Sá Maia",
-  "version": "0.97",
+  "version": "0.98",
   "homepage_url": "https://github.com/denilsonsa/crx-uri-splitter/",
 
   "icons": {
@@ -25,7 +25,8 @@
   "commands": {
     "_execute_browser_action": {
       "suggested_key": {
-        "default": "Ctrl+Shift+L"
+        "default": "Ctrl+Shift+L",
+        "mac": "MacCtrl+L"
       }
     }
   },
