Independent manifest files for Chrome and Firefox
Chrome Web Store rejected the latest version of this extension because
of the manifest.

> **Violation reference ID:** Yellow Magnesium
>
> **Violation:** Not providing promised functionality
>
> "The package is invalid as The "background.scripts" key cannot be used with manifest_version 3. Use the "background.service_worker" key instead."
>
> **How to rectify:** Test the code that you submit to the Web Store locally; verify that your submission contains the files that you expect at the paths that you expect and is working as intended. For more information, please refer to the documentation and migration checklist on Manifest V3 version.
>
> **Relevant section of the programme policy:** Extensions with broken functionality – such as dead sites or non-functioning features – are not allowed.

So now I'm having two copies of the manifest file. One for Chrome (with
service workers but without background scripts), another for Firefox
(with background scripts but without service workers).

--- a/manifest-chrome.json
+++ b/manifest-chrome.json
@@ -24,9 +24,7 @@
     "default_title": "URI Splitter"
   },
   "background": {
-    "service_worker": "serviceworker.js",
-    "scripts": ["common.js", "serviceworker.js"],
-    "persistent": false
+    "service_worker": "serviceworker.js"
   },
   "commands": {
     "_execute_action": {
@@ -45,10 +43,5 @@
     "activeTab",
     "storage"
   ],
-  "content_security_policy": {},
-  "browser_specific_settings": {
-    "gecko": {
-      "id": "uri-splitter@denilson.sa.nom.br"
-    }
-  }
+  "content_security_policy": {}
 }
